kubernetes/image-service-inceptv3/image-service-inceptv3-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: image-service-inceptv3
  labels:
    app: image-service-inceptv3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: image-service-inceptv3
  template:
    metadata:
      labels:
        app: image-service-inceptv3
    spec:
      containers:
        - name: image-service-inceptv3
          image: 'image-service-inceptv3:dev'
          ports:
            - name: http
              containerPort: 5000
