kubernetes/image-service-inceptv3/image-service-inceptv3.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-service-inceptv3
spec:
  ports:
    - name: http
      targetPort: 5000
      port: 80
  selector:
    app: image-service-inceptv3
